# NotenPunkteUmrechner

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  main.c
